--- a/pom.xml
+++ b/pom.xml
@@ -646,6 +646,11 @@
                 </plugins>
             </build>
         </profile>
+        <distributionManagement>
+  <snapshotRepository>
+    <id>nexus-petclinic</id>
+    <url>http://3.133.112.6:8081/repository/nexus-petclinic/</url>
+  </snapshotRepository>
+</distributionManagement>
    </profiles>
-
 </project>
